# LitterRobot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  run.sh
src/: config.py  main.py  notifier.py  skylight_client.py  whisker_client.py
tests/: test_notifier.py
